add connection monetdb

--- a/project.properties.template
+++ b/project.properties.template
@@ -3,6 +3,11 @@ database.user=bdm
 database.host=dodrio.fib.upc.es:27017
 database.password=
 
+[monetdb]
+database.user=monetdb
+database.host=dodrio.fib.upc.es
+database.password=
+
 [hdfs]
 hdfs.host=dodrio.fib.upc.es
 hdfs.user=bdm
